--- a/todolist.css
+++ b/todolist.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Courier New', Courier, monospace;
-    background-color: yellow;
+    /* background-color: yellow; */
 }
 .js-todolist,
 .todo-input-grid {
